# cryptoinsight

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt
app/: config.py
app/middleware/: logging.py  rate_limit.py
app/models/: __init__.py  crypto.py  portfolio.py  user.py
app/routes/: alerts.py  auth.py  crypto.py  portfolio.py
app/services/: alert_service.py  crypto_service.py  portfolio_service.py
app/utils/: helpers.py  mock_data.py
